# SNEWS_DB_PIPELINE

./: .gitignore  Dockerfile  Dockerfile.publishing_tools  Dockerfile.snews_db_pipeline  README.md  docker-compose.yml  listener.sh  pyproject.toml  run_firedrill.sh  run_kafka_listener.sh  run_tests.sh  send_messages.sh  write_messages.sh
.github/workflows/: firedrill.yml
snews_db/: __main__.py  db_operations.py  kafka_listener.py
snews_db/database/: database_connector.py  kafka_listener.py  models.py
snews_db/database/initialization/: init_db.sql
snews_db/tests/: test_database.py  test_kafka_listener.py  test_store_message.py
snews_db/tests/etc/: test-config.env
snews_db/tests/example_messages/: example_combined_message.json  example_significance_tier_message.json  firedrill_combined_message.json  firedrill_combined_message2.json
snews_db/utils/: db_utils.py
