[tool.poetry]
name = "snews-db"
version = "0.1.0"
description = "A database for storing neutrino detector events."
#authors = ["SNEWS Collaboration <snews2.0@lists.bnl.gov>"]
#license = "BSD 3-Clause"
readme = "README.md"
packages = [{include = "snews_db"}]

[tool.poetry.scripts]
snews_db = "snews_db.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
hop-client = "^0.10.0"
numpy = "^1.26.0"
pandas = "^2.1.1"
python-dotenv = ">=0.21.1,<0.22.0"  # Constrained by snews_pt
sqlalchemy = "^2.0.32"
snews-data-formats = "^1.0.0"
psycopg2-binary = "^2.9"  # PostgreSQL adapter
confluent-kafka = "^2.3" # Kafka client

[tool.poetry.group.dev.dependencies]
snews-pt = "^1.0.0"
autopep8 = "^2.0.4"
flake8 = "^6.1.0"
pytest = "<6.3.0"  # Constrained by snews_pt
black = "^25.1.0"
mypy = "^0.910"

[tool.poetry.group.docs.dependencies]
sphinx = "<5"  # Constrained by snews_pt
sphinx-pdj-theme = "^0.4.0"

#[tool.poetry.packages]

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


